--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "voxell"
   ],
   "license": "GPL v3.0",
-  "unity": "2019.4",
+  "unity": "2020.4",
   "unityRelease": "0f1",
   "version": "1.1.0",
   "dependencies": {
     "com.unity.mathematics": "1.2.1",
-    "com.unity.collections": ""
+    "com.unity.collections": "0.15.0-preview.21"
   }
 }
