--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "voxell.util",
   "displayName": "VX Util",
   "author": "Nixon",
-  "description": "Unity utilities to speed up things!",
+  "description": "Unity utilities to speed things up!",
   "keywords": [
     "util",
     "voxell"
@@ -10,9 +10,11 @@
   "license": "GPL v3.0",
   "unity": "2020.4",
   "unityRelease": "0f1",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "dependencies": {
     "com.unity.mathematics": "1.2.1",
-    "com.unity.collections": "0.15.0-preview.21"
+    "com.unity.collections": "1.0.0-pre.5",
+    "com.unity.jobs": "0.11.0-preview.6",
+    "com.unity.burst": "1.5.5"
   }
 }
