Voxell.NativeContainers namespace

--- a/Runtime/NativeContainers/VX.Util.Runtime.NativeContainers.asmdef
+++ b/Runtime/NativeContainers/VX.Util.Runtime.NativeContainers.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "VX.Util.Runtime.NativeContainers",
-    "rootNamespace": "",
+    "rootNamespace": "Voxell.NativeContainers",
     "references": [
         "GUID:e0cd26848372d4e5c891c569017e11f1"
     ],
