--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "util",
     "voxell"
   ],
-  "license": "GPL v3.0",
+  "license": "Apache 2.0",
   "unity": "2020.4",
   "unityRelease": "0f1",
   "version": "1.3.0",
