--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "version": "1.3.0",
   "dependencies": {
     "com.unity.mathematics": "1.2.1",
-    "com.unity.collections": "0.15.0-preview.21",
-    "com.unity.jobs": "0.8.0-preview.23",
+    "com.unity.collections": "1.0.0-pre.5",
+    "com.unity.jobs": "0.11.0-preview.6",
     "com.unity.burst": "1.5.5"
   }
 }
