inclusive min/max scan

--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
     "com.unity.collections": "1.0.0-pre.5",
     "com.unity.jobs": "0.11.0-preview.6",
     "com.unity.burst": "1.5.5"
-  }
+  },
+  "hideInEditor": false
 }
