--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "unity": "2020.3",
   "version": "1.4.0",
   "dependencies": {
-    "com.unity.mathematics": "1.2.1",
-    "com.unity.collections": "1.0.0-pre.5",
+    "com.unity.mathematics": "1.2.5",
+    "com.unity.collections": "1.1.0",
     "com.unity.jobs": "0.11.0-preview.6",
-    "com.unity.burst": "1.5.5"
+    "com.unity.burst": "1.6.0",
+    "com.unity.test-framework": "1.1.30"
   },
   "hideInEditor": false
 }
