--- a/Assets/_PackageRoot/package.json
+++ b/Assets/_PackageRoot/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.github.voxell.unity.util",
+  "name": "com.github.voxell.unityutil",
   "displayName": "VX Util",
   "author": "Nixon",
   "description": "Unity utilities to speed things up!",
