--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@ temp/
 /[Rr]ecordings/
 /[Rr]eleases/
 /[Rr]elease/
+
+
+# MemoryCaptures can get excessive in size.
+# They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
@@ -66,7 +70,11 @@ sysinfo.txt
 *.apk
 *.aab
 *.unitypackage
+*.unitypackage.meta
 *.exe
+
+# Crashlytics generated file
+crashlytics-build.properties
 
 # Packed Addressables
 /[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
@@ -77,11 +85,15 @@ sysinfo.txt
 
 # Tensorflow trained checkpoints and weights
 *.h5
+*.h5.meta
 *.pbmm
+*.pbmm.meta
 *.tflite
+*.tflite.meta
 
 # API keys
 *.apikey
+
 # pycaches
 *.pyc
 
@@ -91,6 +103,10 @@ AudioClips/
 *.wav
 *.audio
 
+# license
+LICENSE.meta
+
 # large libraries
 native/
 tensorflow.dll
+tensorflow.dll.meta
