--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "com.unity.mathematics": "1.2.6",
     "com.unity.collections": "1.2.3",
-    "com.unity.burst": "1.6.5"
+    "com.unity.burst": "1.6.5",
+	"com.unity.test-framework": "1.1.30"
   },
   "hideInEditor": false
 }
