--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "voxell.util",
+  "name": "com.github.voxell.unityutil",
   "displayName": "VX Util",
   "author": "Nixon",
   "description": "Unity utilities to speed things up!",
@@ -13,9 +13,8 @@
   "dependencies": {
     "com.unity.mathematics": "1.2.6",
     "com.unity.collections": "1.2.3",
-    "com.unity.jobs": "0.50.0-preview.9",
     "com.unity.burst": "1.6.5",
-    "com.unity.test-framework": "1.1.30"
+	"com.unity.test-framework": "1.1.30"
   },
   "hideInEditor": false
 }
