remove views, change VoxellMenuItem namespace to Voxell.Util.Editor

--- a/Voxell.Util.Editor/Voxell.Util.Editor.asmdef
+++ b/Voxell.Util.Editor/Voxell.Util.Editor.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:5d380aad12070eb419c6e27b68ec6534"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
