--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
   "unity": "2020.3",
   "version": "1.4.3",
   "dependencies": {
-    "com.unity.mathematics": "1.2.6",
-    "com.unity.collections": "1.2.3",
-    "com.unity.burst": "1.6.5",
-    "com.unity.test-framework": "1.1.30"
+    "com.unity.mathematics": "1.2.6"
   },
   "hideInEditor": false
 }
