--- a/Voxell.Util/Voxell.Util.asmdef
+++ b/Voxell.Util/Voxell.Util.asmdef
@@ -2,7 +2,8 @@
     "name": "Voxell.Util",
     "rootNamespace": "Voxell.Util",
     "references": [
-        "GUID:d8b63aba1907145bea998dd612889d6b"
+        "GUID:d8b63aba1907145bea998dd612889d6b",
+        "GUID:e0cd26848372d4e5c891c569017e11f1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
